--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -18,19 +18,29 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - uses: actions/setup-go@v2
         with:
           go-version: 1.18.3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASS }}
+
       - name: get latest tag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         id: get-latest-tag
         with:
           fallback: latest
+
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -38,4 +48,4 @@ jobs:
           file: Dockerfile
           push: true
           tags: beclab/search2-gateway:${{ steps.get-latest-tag.outputs.tag }}
-
+          platforms: linux/amd64,linux/arm64
